@startuml ClassDiagram
/'class Account{
    -username: str
    -email: str
    -password: str
    -user: User
    -settings: UserSettings
    +created_account()
    +delete_account()
}'/
class User{
    -id: int
    -password: str
    -creation_date: datetime
    -last_login_date: datetime
    -text_records: List[Text]
    -settings:UserSettings
    +email: str
    +login(email: str, password: str)
    +signoff()
    +insert_text(text: Text)
    +open_saved_text()
    +save_text(text: Text)
    +edit_text(text_id: int, new_text: str)
    +delete_text(text_id: int)
    +search_text(keyword: str)
    +view_profile()
    +save()
    +delete()
    +find(id:int)
}
class UserSettings{
    -language: str
    +update_language(language: str)
    +edit_username(new_username:str)
    +edit_password(new_password: str)
}
class Role{
    -name:str
    -description:str
    +change_role()
}
enum Roles{
    user
    admin
}
class Text{
    -id:int
    -content: str
    -length: int
    -language: str
    -history: TextHistory
    +change_content(new_content: str)
    +save()
    +delete()
    +find(id:int)
    +encrypt_text(key: bytes): EncryptedContent
    +decrypt_text(key: bytes): EncryptedContent
}
class TextHistory{
    +id:int
    +content: str
    -entries: List[str]
    +add_entry(entry: str)
    +save()
    +delete()
    +find(id:int)
    +view_history()
    +view_versions()
    +change_version()
}
class EncryptedContent{
    -data: str
    -length: int
    -text_password: str
    +encrypt_text(): str
    +decrypt_text(): str
}

User -- Role
Role - Roles
Text -- EncryptedContent
/'Account-- User'/
User -- UserSettings
User - Text
Text -- TextHistory
@enduml